--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,41 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
+
 // The variables you want to modify
-// $font-size-root: 20px;
+$font-size-root: 16px;
+
+//width
+$s : 480px;
+$m : 768px;
+$l : 1024px;
+$xl: 1366px;
+
+$margin-4      : 0.25em;
+$padding-4     : 0.25em;
+$margin-0-4    : 0 0.25em;
+$pudding-0-4   : 0 0.25em;
+$margin        : 0.75em;
+$padding       : 0.75em;
+$border-radius : 0.75em;
+$br-12-12-0-0  : 0.75em 0.75em 0 0;
+$margin-24     : 1.5em;
+$padding-24    : 1.5em;
+$margin-24-0   : 1.5rem 0;
+$padding-24-0  : 1.5rem 0;
+$padding-0-20  : 0 1.5em;
+
+//font-size
+$table-font   : 1em;
+$table-font-l : 1.25em;
+$FShead-name  : 3em;
+$FSteam       :1.375em;
+
+
+//Colors
+$CBlackBlue : rgba(32, 0, 80, 1);
+$CLiteBlue    : #301070;
+$CItem: #E0D8FF;
+$CTable-Wrapper:#ffffff;
+$CItem-Wrapper-hover :rgba(48, 16, 112, 0.4);
+$Item-Wrapper-2n:rgba(16, 0, 37, 0.25);
+
+//Time
+$TAnimation: 0.35s;
