--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,35 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+//theHeader component
+.header {
+  display: flex;
+  padding: $padding;
+
+  &__menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: $margin-4;
+    margin: $padding-4;
+  }
+
+  &__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: $padding-4;
+    margin: $margin-4;
+
+    transition: opacity $TAnimation ease;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+}
 
 .wrapper {
   display: flex;
@@ -29,31 +58,81 @@ body {
 .content {
   max-width: $l;
   flex: 1;
+
+  &__head-name {
+    margin: $margin-24-0;
+    padding: $padding-24-0;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: $FShead-name;
+
+
+    text-transform: uppercase;
+
+    background: linear-gradient(268.55deg, #EBC1FF 0%, #E0D8FF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    text-shadow: 0 8px 16px rgba(16, 0, 37, 0.15);
+  }
+
+  &__manager {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__btn{
+    padding: $padding-24;
+    display: flex;
+    justify-content: center;
+  }
 }
 
-.head-name {
-  margin: $margin-24-0;
-  padding: $padding-24-0;
+.search-box {
+  display: flex;
 
-  font-family: 'Inter';
+  &_right{
+    justify-content: flex-end;
+  }
+}
+
+.tile-table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  padding: 1.5rem 0;
+  border-radius: 0.75em;
+  max-width: 1024px;
+  font-family: "Inter";
   font-style: normal;
-  font-weight: 700;
-  font-size: $FShead-name;
+  font-weight: 600;
+  font-size: 1em;
+  line-height: 1.25em;
+  color: #ffffff;
 
+  &__card {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    max-width: 293px;
+    min-height: 400px;
+    margin: $margin-24-0;
+    padding: $padding-24;
+    border: 2px solid $CItem;
 
-  text-transform: uppercase;
-
-  background: linear-gradient(268.55deg, #EBC1FF 0%, #E0D8FF 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-  text-shadow: 0 8px 16px rgba(16, 0, 37, 0.15);
+    &:hover {
+      background: $CItem-Wrapper-hover;
+    }
+  }
 }
 
-
-.Table-Wrapper {
-  margin: $margin-24-0;
+.table-wrapper {
   border-radius: $border-radius;
   max-width: $l;
   font-family: 'Inter';
@@ -62,9 +141,10 @@ body {
   font-size: $table-font;
   line-height: $table-font-l;
   color: $CTable-Wrapper;
+
 }
 
-.Table-Header {
+.table-header {
   display: grid;
 
   padding: $padding-0-20;
@@ -74,15 +154,46 @@ body {
   border-right: 2px solid $CLiteBlue;
 
   text-transform: uppercase;
+
+  &__column{
+    display: flex;
+    margin: $margin;
+    padding: $padding;
+  }
 }
 
-.column {
+.table-footer {
+  padding: 10px;
+
   display: flex;
-  margin: $margin;
-  padding: $padding;
+  align-items: center;
+
+  border-radius: 0 0 10px 10px;
+  border-top: 1px solid #301070;
+  border-left: 2px solid #301070;
+  border-right: 2px solid #301070;
+  border-bottom: 2px solid #301070;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+
+  color: #FFFFFF;
+
+  &__text{
+    margin: $margin-4 $margin-2;
+    padding: $padding-4 $padding-2;
+  }
+
+  &__svg{
+    margin: $margin-4 $margin-2 $margin-4 $margin-4;
+    padding: $padding-4 $padding-2 $padding-4 $padding-4 ;
+  }
 }
 
-.Item-Wrapper {
+.item-wrapper {
   display: grid !important;
 
   padding: $padding-0-20;
@@ -91,52 +202,137 @@ body {
   border-bottom: 1px solid $CLiteBlue;
   border-top: 1px solid $CLiteBlue;
   transition: all $TAnimation ease;
+
+  &:hover {
+    background: $CItem-Wrapper-hover;
+  }
+  &_2n {
+    background: rgba(16, 0, 37, 0.25);
+  }
+  &__item {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 0.5fr;
+
+    margin: $margin;
+    padding: $padding;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: $table-font;
+    line-height: $table-font-l;
+
+    color: $CItem;
+  }
 }
 
-.Item-Wrapper:hover {
-  background: $CItem-Wrapper-hover;
+.command-img {
+
+  display: flex;
+  justify-content: center;
+
+  &__img{
+    padding: $padding;
+    margin: $margin;
+    max-height: 125px;
+  }
+
+  &__icon {
+    justify-self: center;
+    height: 50px;
+  }
 }
 
-.Item-Wrapper-2n {
-  background: rgba(16, 0, 37, 0.25);
+.command-text{
+  &__name{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: $FSteam;
+    line-height: 29px;
+    &_color{
+      color: #BBDD00;
+    }
+  }
+
+  &__last-game{
+
+  }
 }
 
-.item {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 0.5fr;
+.progress-bar {
+  display: flex;
+  flex-direction: column;
 
-  margin: $margin;
-  padding: $padding;
+  color: #E0D8FF;
 
-  font-family: 'Inter';
-  font-style: normal;
+  font-family: Inter;
+  font-size: 16px;
   font-weight: 600;
-  font-size: $table-font;
-  line-height: $table-font-l;
+  line-height: 19px;
 
-  color: $CItem;
+  &__value {
+    margin: 0.156em 0;
+    padding: 0.156em 0;
+
+  }
 }
 
-.icon {
-  justify-self: center;
-  height: 50px;
+.bar {
+  margin: 0.313em 0;
+  flex: 1;
+  border: 0;
+  height: 4px;
+  width: 128px;
+  border-radius: 100vh;
+  background: #C5C4C4;
 
-  margin: $margin-0-4 ;
-  padding: $pudding-0-4 ;
+  &::-webkit-progress-bar {
+    height: 4px;
+    border-radius: 100vh;
+    background: #100025;
+  }
+  &::-webkit-progress-value{
+    border-radius: 100vh;
+  }
+  &_violet::-webkit-progress-value {
+    background: #7540F0;
+  }
+  &_lime::-webkit-progress-value {
+    background: #BBDD00;
+  }
+  &_Yellow::-webkit-progress-value {
+    background: #EECD00;
+  }
+  &_orange::-webkit-progress-value {
+    background: #FA7000;
+  }
 }
 
-.team {
+//theFooter component
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background: rgba(16, 0, 37, 0.25);
+
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-size: $FSteam;
-  line-height: 29px;
+  font-size: 16px;
+  line-height: 19px;
+
+  &__right{
+    display: flex;
+    justify-content: space-between;
+  }
+
 }
 
-.btn {
-  margin: $margin-24;
-  padding: $padding-24;
-  display: flex;
-  justify-content: center;
+.footer-text {
+  margin: 12px;
+  padding: 12px;
+
+  color: #E0D8FF;
+  font-size: 19px;
 }
